--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,23 @@
 </head>
 <body>
 
-<%= yield %>
+<%= render 'layouts/application/navbar' %>
+
+	<div class="container">
+		<% flash.each do |key, value| %>
+			<div class="alert alert-<%= key %>">
+				<%= value %>
+			</div>
+		<% end %>
+	</div>
+
+	<%= yield :top_content %>
+
+	<div class="container">
+		<h1><%= yield :header %></h1>
+
+		<%= yield %>
+	</div>
 
 </body>
 </html>
