--- a/app/views/layouts/application/_navbar.html.erb
+++ b/app/views/layouts/application/_navbar.html.erb
@@ -7,15 +7,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "PickInstant", root_path, class: 'navbar-brand' %>
+      <%= link_to "vPhoto Gallery", root_path, class: 'navbar-brand' %>
     </div>
 
     <div class="collapse navbar-collapse" id="foodtracker-collapsed-navbar">
       <% if user_signed_in? %>
         <ul class="nav navbar-nav">
           <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to 'View my picinstants', photos_path %> </li>
-          <li><%= link_to 'View followship', followships_path%> </li>
+          <li><%= link_to 'View my Gallery', photos_path %> </li>
         </ul>
       <% else %>
         <ul class="nav navbar-nav">
@@ -26,15 +25,14 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <p class="navbar-text">
-            Hello,<%= link_to current_user.nickname, edit_user_registration_path(current_user), class: 'navbar-link' %>
+            Hello,<%= link_to current_user.name, edit_user_registration_path(current_user), class: 'navbar-link' %>
           </p>
           <ul class="nav navbar-nav">
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">Account <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to 'Edit profile', edit_user_registration_path(current_user) %></li>
-                <li><%= link_to 'View my picinstants', photos_path%> </li>
-                <li><%= link_to 'View followship', followships_path%> </li>
+                <li><%= link_to 'View my Gallery', photos_path%> </li>
                 <li class="divider"></li>
                 <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
               </ul>
