Paperclip gem was installed

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,2 +1,30 @@
-<h1>Photos#index</h1>
-<p>Find me in app/views/photos/index.html.erb</p>
+<h2>All my photos</h2>
+
+ 
+	<p><%= link_to 'New photo', new_photo_path, class: 'btn btn-primary'%></p>
+
+
+	<table class="table table-striped">
+		<tr>
+			<th>Title</th>
+			<th>Photo</th>
+			<th>Action<th>
+		</tr>
+
+		<% current_user.photos.each do |photo| %>
+			<tr>
+				
+				<% if photo.title.nil? %>
+					<td>No title</td>
+				<% else %> 
+					<td><%= photo.title %></td>
+				<% end %>
+				<td><%= image_tag photo.image.url(:small) %></td>
+				
+				<td>
+					<%= link_to 'View', photo_path(photo) %>
+					<%= link_to 'Delete', photo_path(photo), method: :delete, data: {confirm: 'Are you sure you that you want to delete this photo?'} %>
+				</td>
+			</tr>	
+		<% end %>
+	</table>
