--- a/app/views/ucomments/create.html.erb
+++ b/app/views/ucomments/create.html.erb
@@ -1,2 +1,3 @@
-<h1>Ucomments#create</h1>
-<p>Find me in app/views/ucomments/create.html.erb</p>
+$("#comments").append("<%= j render @ucomment %>");
+$("#comment_commenter").val("");
+$("#comment_text").val("");
