--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,6 +1,5 @@
-<h2>All my photos</h2>
-
  <% if user_signed_in? %>
+ 	<h2>All my photos</h2>
 	<p><%= link_to 'New photo', new_photo_path, class: 'btn btn-primary'%></p>
 
 
@@ -25,23 +24,17 @@
 			</tr>	
 		<% end %>
 	</table>
-<% else %>
-	<table class="table table-striped">
-		<tr>
-			<th>Title</th>
-			<th>Photo</th>
-			
-		</tr>
 
-		<% @photos.each do |photo| %>
-			<tr>
-								
-				<td><%= photo.caption %></td>
+<% else %>
+	<h2>All photos</h2>
+	<div class="row">
+		<div class="col-sm-4"
+			<% @photos.each do |photo| %>
+			<div><%= photo.caption %></div>
 				
-				<td><%= image_tag photo.image.url(:small) %></td>
-				
-			</tr>	
+			<div><%= image_tag photo.image.url(:small) %></div>
+				by <%= photo.user.name %>
+
 		<% end %>
-	</table>
 <% end %>
 
