--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h2>All photos</h2>
+	<div class="row">
+	<div class="col-sm-12"
+		<% @photos.each do |photo| %>
+		<div class="col-sm-4">
+			<%= image_tag photo.image.url(:small) %><br/>
+		 	<%= link_to photo.caption, welcome_path(photo) %>	
+				by <%= photo.user.name %>
+	</div>
+
+<% end %>
+</div>
+</div>
